Add system configuration for setting security level

--- a/ngrinder-controller/src/main/resources/ngrinder_home_template/system.conf
+++ b/ngrinder-controller/src/main/resources/ngrinder_home_template/system.conf
@@ -10,6 +10,11 @@
 # true if enabling security manager. The default value is false
 #controller.security=false
 
+# Determine security level of security manager. It only works if controller.security is true.
+# If you set 'controller.security.level=light', The less secure manager will be set.
+# If not set, The default security manager will be set.
+#controller.security.level=
+
 # true if the password change should not be allowed.
 #controller.demo_mode=false
 
