--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ before_install:
   - ./install_maven_lib.sh
 jdk:
   - oraclejdk8
-  - oraclejdk9
+  - openjdk7
 script:
   - mvn test -DskipTests=true
