Fix failed core test case

--- a/ngrinder-core/pom.xml
+++ b/ngrinder-core/pom.xml
@@ -12,6 +12,7 @@
 
 	<properties>
 		<outputfilename>${project.version}.jar</outputfilename>
+		<ngrinder.version>${project.version}</ngrinder.version>
 	</properties>
 
 	<dependencies>
