Add agent.enable_security configuration

--- a/ngrinder-core/src/main/resources/agent.conf
+++ b/ngrinder-core/src/main/resources/agent.conf
@@ -14,3 +14,7 @@ common.start_mode=agent
 
 # some jvm is not compatible with DNSJava. If so, set this false.
 #agent.enable_local_dns=false
+
+# default value is true.
+# when `agent.enable_security=false` the agent always runs in insecure mode.
+#agent.enable_security=true
