--- a/ngrinder-core/pom.xml
+++ b/ngrinder-core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>ngrinder</artifactId>
 		<groupId>org.ngrinder</groupId>
-		<version>3.4.4</version>
+		<version>3.5.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ngrinder-core</artifactId>
 	<name>ngrinder-core</name>
