--- a/ngrinder-starter/pom.xml
+++ b/ngrinder-starter/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.ngrinder</groupId>
 		<artifactId>ngrinder</artifactId>
-		<version>3.4.4</version>
+		<version>3.5.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ngrinder-starter</artifactId>
 
