--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 language: java
-before_install:
-  - ./install-maven-lib.sh
 jdk:
   - openjdk8
 script:
-  - mvn test
-cache:
-  directories:
-  - $HOME/.m2
+  - ./gradlew test
