--- a/ngrinder-controller/src/main/resources/ngrinder_home_template/database.conf
+++ b/ngrinder-controller/src/main/resources/ngrinder_home_template/database.conf
@@ -1,9 +1,11 @@
-# H2 / cubrid can be set
+# H2 / cubrid / mysql can be set
 database.type=H2
 #database.type=cubrid
+#database.type=mysql
 
-# for cubrid. You should configure the following.
-# database.url=localhost:33000:ngrinder
+# for cubrid or mysql. You should configure the following.
+# database.url=cubrid_server_ip:cubrid_server_port:ngrinder
+# database.url=mysql_server_ip:mysql_server_port/ngrinder
 
 # for H2 remote connection, You should configure like followings.
 # You can see how to run the H2 DB server by yourself in http://www.h2database.com/html/tutorial.html#using_server
