Fade out Cubrid

--- a/ngrinder-controller/src/main/resources/ngrinder_home_template/database.conf
+++ b/ngrinder-controller/src/main/resources/ngrinder_home_template/database.conf
@@ -1,19 +1,18 @@
-# H2 / cubrid / mysql can be set
+# H2 / mysql can be set
 database.type=H2
-#database.type=cubrid
 #database.type=mysql
 
-# for cubrid or mysql. You should configure the following.
-# database.url=cubrid_server_ip:cubrid_server_port:ngrinder
-# database.url=mysql_server_ip:mysql_server_port/ngrinder
+# for mysql. You should configure the following.
+#database.url=mysql_server_ip:mysql_server_port/ngrinder
+
+# if you apply additional options for mysql database enable this.
+# this is added after the 'database.url' config.
+#database.url_option=?characterEncoding=utf8
 
 # for H2 remote connection, You should configure like followings.
 # You can see how to run the H2 DB server by yourself in http://www.h2database.com/html/tutorial.html#using_server
 # If this is not set, ngrinder will create the embedded DB.
-# database.url=tcp://h2_server_ip:h2_server_port:ngrinder
-
-# if you want to use HA mode in cubrid, you should enable following
-# database.url_option=&althosts=secondary_ip:port
+#database.url=tcp://h2_server_ip:h2_server_port:ngrinder
 
 # you should provide id / password who has a enough permission to create tables in the given db.
 database.username=admin
