--- a/ngrinder-groovy/build.gradle
+++ b/ngrinder-groovy/build.gradle
@@ -7,10 +7,8 @@ configurations {
 }
 
 dependencies {
-    compile (group: "org.json", name: "json", version:"20090211")
+    compile (project(":ngrinder-runtime"))
     compile (group: "org.codehaus.groovy", name: "groovy-all", version:"2.2.1")
-    compile (group: "junit", name: "junit-dep", version:"4.8.2")
-    compile (group: "org.hamcrest", name: "hamcrest-all", version:"1.1")
 
     testCompile (group: "org.mockito", name: "mockito-core", version:"1.8.5")
 
