--- a/ngrinder-controller/build.gradle
+++ b/ngrinder-controller/build.gradle
@@ -2,9 +2,7 @@ description = "ngrinder-controller"
 
 buildscript {
     repositories {
-        maven { url "https://repo.spring.io/libs-snapshot" }
-        maven { url "https://repo.spring.io/libs-milestone" }
-        maven { url "https://plugins.gradle.org/m2/" }
+        mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.6.RELEASE")
@@ -38,9 +36,7 @@ dependencies {
     compile (group: "org.python", name: "jython-standalone", version: "2.5.3")
     compile (group: "net.sf.ehcache", name: "ehcache-core", version: "2.5.1")
     compile (group: "com.google.guava", name: "guava", version: "20.0")
-    compile (group: "org.springframework.security", name: "spring-security-web", version: spring_security_version)
     compile (group: "org.springframework.security", name: "spring-security-taglibs", version: spring_security_version)
-    compile (group: "org.springframework.security", name: "spring-security-config", version: spring_security_version)
 
     compile (group: "org.apache.maven", name: "maven-embedder", version: "3.6.3")
     compile (group: "org.apache.maven", name: "maven-compat", version: "3.6.3")
@@ -51,8 +47,6 @@ dependencies {
 
     compile (group: "org.liquibase", name: "liquibase-core", version: "3.5.3")
     compile (group: "org.hibernate", name: "hibernate-ehcache", version: "5.0.11.Final")
-    compile (group: "org.aspectj", name: "aspectjrt", version: "1.6.12")
-    compile (group: "org.aspectj", name: "aspectjweaver", version: "1.6.12")
     compile (group: "mysql", name: "mysql-connector-java", version: "5.1.33")
     compile (group: "commons-httpclient", name: "commons-httpclient", version: "3.1")
     compile (group: "com.h2database", name: "h2", version: "1.3.168")
