--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ allprojects  {
 
   if(project.convention.findPlugin(JavaPluginConvention)) {
     // Change the output directory for the main and test source sets back to the old path
-    sourceSets.main.output.classesDir = new File(buildDir, "classes/main")
-    sourceSets.test.output.classesDir = new File(buildDir, "classes/test")
+    sourceSets.main.java.outputDir = new File(buildDir, "classes/main")
+    sourceSets.test.java.outputDir = new File(buildDir, "classes/test")
   }
 }
 
@@ -24,19 +24,19 @@ subprojects {
   compileJava.options.encoding = "UTF-8"
   compileTestJava.options.encoding = "UTF-8"
 
-  sourceCompatibility = 1.7
-  targetCompatibility = 1.7
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
 
   ext {
     slf4j_version = "1.6.4"
     jetty_version = "9.2.17.v20160517"
-    spring_security_version = "4.1.3.RELEASE"
-    spring_data_version = "1.9.4.RELEASE"
-    spring_version = "4.2.5.RELEASE"
-    springboot_version = "1.4.1.RELEASE"
+    spring_security_version = "5.0.11.RELEASE"
+    spring_boot_version = "2.0.8.RELEASE"
     svnkit_version = "1.8.3-scm1"
-    hibernate_version = "5.0.11.Final"
+    hibernate_version = "5.2.17.Final"
     hazelcast_version = "3.11.1"
+    gson_version = "2.8.0"
+    mockito_version = "2.15.0"
   }
 
   repositories {
