--- a/ngrinder-controller/build.gradle
+++ b/ngrinder-controller/build.gradle
@@ -5,28 +5,35 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.6.RELEASE")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${spring_boot_version}")
+        classpath("io.spring.gradle:dependency-management-plugin:1.0.6.RELEASE")
     }
 }
 
 apply plugin: "war"
 apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 
-sourceSets.main.output.resourcesDir = sourceSets.main.output.classesDir
+sourceSets.main.output.resourcesDir = sourceSets.main.java.outputDir
 
 def agentScriptPath = "${sourceSets.main.output.resourcesDir}/ngrinder-sh/agent"
 def monitorScriptPath = "${sourceSets.main.output.resourcesDir}/ngrinder-sh/monitor"
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.boot:spring-boot-starter-parent:${spring_boot_version}"
+    }
+}
 
 dependencies {
     compile project(":ngrinder-core")
     compile files("${rootDir}/lib/universal-analytics-java-1.0.jar")
 
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: springboot_version)
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-freemarker', version: springboot_version)
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: springboot_version)
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: springboot_version)
-    compile (group: 'org.springframework.boot', name: 'spring-boot-starter-cache', version: springboot_version)
-    compile (group: 'org.springframework.boot', name: 'spring-boot-loader', version: springboot_version)
+    compile (group: "org.springframework.boot", name: "spring-boot-starter-web")
+    compile (group: "org.springframework.boot", name: "spring-boot-starter-freemarker")
+    compile (group: "org.springframework.boot", name: "spring-boot-starter-security")
+    compile (group: "org.springframework.boot", name: "spring-boot-starter-data-jpa")
+    compile (group: "org.springframework.boot", name: "spring-boot-starter-cache")
 
     compile (group: "rome", name: "rome", version: "1.0")
     compile (group: "com.ibm.icu", name: "icu4j", version: "4.6")
@@ -53,7 +60,7 @@ dependencies {
     compile (group: "commons-fileupload", name: "commons-fileupload", version: "1.3.1")
     compile (group: "commons-dbcp", name: "commons-dbcp", version: "1.4")
     compile (group: "cglib", name: "cglib", version: "2.2.2")
-    compile (group: "com.google.code.gson", name: "gson", version: "2.2")
+    compile (group: "com.google.code.gson", name: "gson", version: gson_version)
     compile (group: "jaxen", name: "jaxen", version: "1.1.4")
     compile (group: "com.beust", name: "jcommander", version: "1.32")
     compile (group: "ro.fortsoft.pf4j", name: "pf4j", version: "0.12.0")
@@ -66,11 +73,10 @@ dependencies {
     compile (group: "com.hazelcast", name: "hazelcast", version: hazelcast_version)
     compile (group: "com.hazelcast", name: "hazelcast-spring", version: hazelcast_version)
 
-    providedRuntime (group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: springboot_version)
+    providedRuntime (group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat', version: spring_boot_version)
 
     testCompile (group: "org.easytesting", name: "fest-assert", version: "1.4")
-    testCompile (group: "org.mockito", name: "mockito-core", version: "1.8.5")
-    testCompile (group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: springboot_version)
+    testCompile (group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: spring_boot_version)
 }
 
 
