--- a/ngrinder-controller/build.gradle
+++ b/ngrinder-controller/build.gradle
@@ -41,7 +41,6 @@ dependencies {
     compile (group: "sonia.svnkit", name: "svnkit", version: svnkit_version)
     compile (group: "javax.servlet.jsp", name: "jsp-api", version: "2.1")
     compile (group: "org.python", name: "jython-standalone", version: "2.5.3")
-    compile (group: "net.sf.ehcache", name: "ehcache-core", version: "2.5.1")
     compile (group: "com.google.guava", name: "guava", version: "20.0")
     compile (group: "org.springframework.security", name: "spring-security-taglibs", version: spring_security_version)
 
@@ -53,7 +52,9 @@ dependencies {
     compile (group: "org.apache.maven.wagon", name: "wagon-provider-api", version: "2.8")
 
     compile (group: "org.liquibase", name: "liquibase-core", version: "3.5.3")
-    compile (group: "org.hibernate", name: "hibernate-ehcache", version: hibernate_version)
+    compile (group: "org.hibernate", name: "hibernate-jcache", version: hibernate_version)
+    compile (group: "com.github.ben-manes.caffeine", name: "caffeine", version: "2.6.2")
+    compile (group: "com.github.ben-manes.caffeine", name: "jcache", version: "2.6.2")
     compile (group: "mysql", name: "mysql-connector-java", version: "8.0.13")
     compile (group: "commons-httpclient", name: "commons-httpclient", version: "3.1")
     compile (group: "com.h2database", name: "h2", version: "1.4.197")
