--- a/ngrinder-controller/src/main/resources/application.yml
+++ b/ngrinder-controller/src/main/resources/application.yml
@@ -15,6 +15,8 @@ server:
     max-upload-size: 50000000
 
 spring:
+  application:
+    name: ngrinder
   autoconfigure:
     exclude:
       - org.springframework.boot.autoconfigure.liquibase.LiquibaseAutoConfiguration
@@ -22,5 +24,4 @@ spring:
       - org.springframework.boot.autoconfigure.freemarker.FreeMarkerAutoConfiguration
   profiles:
     active: production
-  main:
-    allow-bean-definition-overriding: true
+
