--- a/ngrinder-controller/src/main/resources/ngrinder_home_template/system.conf
+++ b/ngrinder-controller/src/main/resources/ngrinder_home_template/system.conf
@@ -118,7 +118,7 @@
 #controller.inactive_client_time_out=30000
 
 # The default value false
-# If you set true, it provides statistic data(json format) as ehcache, dbcp, and so on by using restful api.
+# If you set true, it provides statistic data(json format) as dbcp, and so on by using restful api.
 # Now, it supports http://HOST/stat APIs.
 #controller.enable_statistics=true
 
