--- a/ngrinder-frontend/package.json
+++ b/ngrinder-frontend/package.json
@@ -47,6 +47,7 @@
     "vuebar": "0.0.20",
     "vuedraggable": "^2.15.0",
     "vuejs-paginate": "^2.0.1",
+    "vee-validate": "^2.2.0",
     "vuex": "^3.0.0",
     "jstz": "^2.1.1"
     "i18next": "^15.0.5",
