--- a/ngrinder-frontend/package.json
+++ b/ngrinder-frontend/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "axios": "^0.16.2",
     "base64-js": "^1.2.1",
-    "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "chart.js": "^2.7.2",
     "debug": "~2.2.0",
@@ -26,7 +25,6 @@
     "promise-retry": "^1.1.1",
     "q": "^1.4.1",
     "retry-axios": "^0.3.2",
-    "select2": "^4.0.6-rc.0",
     "vue": "^2.5.2",
     "vue-authenticate": "^1.3.4",
     "vue-headful": "^2.0.1",
@@ -50,6 +48,7 @@
     "vee-validate": "^2.2.0",
     "vuex": "^3.0.0",
     "jstz": "^2.1.1",
+    "intro.js": "^2.9.3",
     "i18next": "^15.0.5",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-localstorage-cache": "^1.1.1",
