--- a/ngrinder-frontend/package.json
+++ b/ngrinder-frontend/package.json
@@ -45,6 +45,7 @@
     "vuebar": "0.0.20",
     "vuedraggable": "^2.15.0",
     "vuejs-paginate": "^2.0.1",
+    "jqplot": "^1.0.9",
     "vee-validate": "^2.2.0",
     "vuex": "^3.0.0",
     "jstz": "^2.1.1",
