Add perftest detail configuration tab

--- a/ngrinder-frontend/package.json
+++ b/ngrinder-frontend/package.json
@@ -21,7 +21,7 @@
     "chart.js": "^2.7.2",
     "debug": "~2.2.0",
     "jshint": "^2.9.6",
-    "moment": "^2.19.1",
+    "moment": "^2.24.0",
     "promise-retry": "^1.1.1",
     "q": "^1.4.1",
     "retry-axios": "^0.3.2",
@@ -48,6 +48,7 @@
     "jqplot": "^1.0.9",
     "vee-validate": "^2.2.0",
     "vuex": "^3.0.0",
+    "vue-slider-component": "^2.8.16",
     "jstz": "^2.1.1",
     "intro.js": "^2.9.3",
     "i18next": "^15.0.5",
