--- a/ngrinder-frontend/package.json
+++ b/ngrinder-frontend/package.json
@@ -22,6 +22,7 @@
     "debug": "~2.2.0",
     "jshint": "^2.9.6",
     "moment": "^2.24.0",
+    "moment-duration-format": "^2.2.2",
     "promise-retry": "^1.1.1",
     "q": "^1.4.1",
     "retry-axios": "^0.3.2",
