--- a/ngrinder-core/build.gradle
+++ b/ngrinder-core/build.gradle
@@ -6,7 +6,7 @@ dependencies {
     compile (project(":ngrinder-runtime"))
     compile (project(":ngrinder-groovy"))
     compile (group: "org.fusesource", name: "sigar", version:"1.6.4")
-    compile (group: "ro.fortsoft.pf4j", name: "pf4j", version:"0.12.0")
+    compile (group: "org.pf4j", name: "pf4j", version:"3.0.1")
     compile (group: "javax.servlet", name: "javax.servlet-api", version:"3.1.0")
     compile (group: "commons-collections", name: "commons-collections", version:"3.2.1")
     compile (group: "org.python", name: "jython-standalone", version:"2.5.3")
